# rfc-zed

./: .gitignore  Cargo.toml  README.md  extension.toml  update.sh
assets/: rfc.json
data/: rfc-index.txt
src/: ietf.rs  main.rs  rfc.rs
