[package]
name = "slash_commands_example"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"

[lints]
#workspace = true

[lib]
path = "src/rfc.rs"
crate-type = ["cdylib"]

[[bin]]
name = "rfc"
path = "src/main.rs"

[dependencies]
serde = "1.0.209"
serde_json = "1.0.127"
zed_extension_api = "0.1.0"
